--- a/WirelessKitAddon.Lib/WirelessKitAddon.Lib.csproj
+++ b/WirelessKitAddon.Lib/WirelessKitAddon.Lib.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <NoWarn>VSTHRD200</NoWarn>
     <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
