Disposing of stream when disconnected & on dispose + Dependency fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/WirelessKitAddon.UX.Windows/bin/Debug/net8.0/WirelessKitBatteryStatus.UX.exe",
+            "program": "${workspaceFolder}/WirelessKitAddon.UX.Windows/bin/Debug/net8.0-windows10.0.17763.0/WirelessKitBatteryStatus.UX.exe",
             "args": ["Wacom CTH-470"],
             "cwd": "${workspaceFolder}/WirelessKitAddon.UX.Windows",
             "stopAtEntry": false,
