Added icon for tray icon app & updated README

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/WirelessKitAddon.UX.Desktop/bin/Debug/net8.0/WirelessKitBatteryStatus.UX.exe",
-            "args": ["Wacom CTH-470"],
+            "args": ["Wacom CTH-470 WL"],
             "cwd": "${workspaceFolder}/WirelessKitAddon.UX.Desktop",
             "stopAtEntry": false,
         },
@@ -17,7 +17,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/WirelessKitAddon.UX.Windows/bin/Debug/net8.0-windows10.0.17763.0/WirelessKitBatteryStatus.UX.exe",
-            "args": ["Wacom CTH-470"],
+            "args": ["Wacom CTH-470 WL"],
             "cwd": "${workspaceFolder}/WirelessKitAddon.UX.Windows",
             "stopAtEntry": false,
         },
