--- a/WirelessKitAddon.UX.Desktop/WirelessKitAddon.UX.Desktop.csproj
+++ b/WirelessKitAddon.UX.Desktop/WirelessKitAddon.UX.Desktop.csproj
@@ -15,6 +15,7 @@
 
   <PropertyGroup>
     <AssemblyName>WirelessKitBatteryStatus.UX</AssemblyName>
+    <ApplicationIcon>../WirelessKitAddon.UX/Assets/battery_100.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
