--- a/WirelessKitAddon.UX.Windows/WirelessKitAddon.UX.Windows.csproj
+++ b/WirelessKitAddon.UX.Windows/WirelessKitAddon.UX.Windows.csproj
@@ -16,6 +16,7 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AssemblyName>WirelessKitBatteryStatus.UX</AssemblyName>
+    <ApplicationIcon>../WirelessKitAddon.UX/Assets/battery_100.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
