--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "type": "coreclr",
             "request": "attach",
             "requireExactSource": false,
-            "processName": "OpenTabletDriver.Daemon.exe",
+            "processName": "OpenTabletDriver.Daemon",
             "logging": {
                 "moduleLoad": false
             },
